src/components/Common/Navbar/Navbar.css
.navbar {
    position: fixed;
    left: 0;
    top: 0;
    width: 15%; /* Adjusted width */
    height: 100vh;
    background-color: #040B14;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
    box-sizing: border-box;
}

.profile-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-bottom: -10px;
}

.profile-pic {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    object-fit: cover;
    border: 10px solid #2C2F3F;
}

/* Adjustments to ensure no other styles are interfering */
.profile-pic-container {
    display: flex;
    justify-content: center;
    width: 100%;
}

.language-toggle {
    position: absolute;
    top: 10px;
    left: 10px;
    background: none;
    border: none;
    cursor: pointer;
}

.language-toggle img {
    width: 30px; /* Adjust as needed */
    height: auto;
}

.profile-name {
    color: #fff;
    font-size: 1.5em;
    margin-bottom: 20px;
}

.social-icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
    margin-bottom: 20px;
}

.social-icons a {
    color: #fff;
    font-size: 20px;
}

.nav-links {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-top: 10px;
    padding-top: 5%;
}

.nav-links a  {
    color: #A8A9B4; /* Original color of the text */
    text-decoration: none;
    margin: 15px 0; /* Increased spacing */
    display: flex;
    align-items: center;
    font-size: 1.1em;
    width: 100%;
    padding-left: 50px;
    transition: color 0.0s; /* Smooth transition for color changes */
}

.nav-links a span {
    margin-left: 8px;
    transition: color 0.0s; /* Smooth transition for color changes */
}

.nav-links a:hover,
.nav-links a.active {
    color: #159DDD; /* Blue color for icon and text */
}

.nav-links a:hover span,
.nav-links a.active span {
    color: #FFFFFF; /* White color for text */
}

/* Add specific hover styles for icons if needed */
.nav-links a:hover .fa,
.nav-links a:hover svg,
.nav-links a.active .fa,
.nav-links a.active svg {
    color: #159DDD; /* Blue color for icons */
}

.nav-links a:hover span {
    color: #FFFFFF; /* White color for text when hovered */
}

.resume-container {
    margin-top: auto;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 0;
    flex-direction: column; /* Stack children vertically */
}

.resume-button {
    color: #ccc;
    background-color: #333;
    text-decoration: none;
    font-size: 1.2em;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80%;
    padding: 10px 20px;
    border-radius: 5px;
    border: 2px solid transparent;
    transition: background-color 0.3s, color 0.3s;
}

.resume-button:hover,
.resume-button:focus {
    color: #04c2c9;
    border-color: #04c2c9;
}

@media (max-width: 768px) {
    .navbar {
        width: 60px; /* Adjusted navbar width for mobile */
    }

    .profile-pic {
        width: 48px; /* Smaller, square profile picture */
        height: 48px;
        border-radius: 0%; /* Make it square */
        border: 2px solid #2C2F3F;
        display: block;
        margin-bottom: 10px; /* Add space below the profile picture */
        margin-top: 20px;
    }

    .language-toggle {
        position: absolute;
        top: 10px;
        left: 5px;
        background: none;
        border: none;
        cursor: pointer;
    }

    /* Adjust social icons container to ensure spacing around it */
    .social-icons {
        flex-direction: column;
        margin-top: 10px; /* Add space above the social icons */
    }

    /* Ensure individual social icons have spacing if needed */
    .social-icons a {
        margin-bottom: 5px; /* Adds spacing between the icons */
    }

    .social-icons a:last-child {
        margin-bottom: 0; /* Removes bottom margin from the last icon to avoid extra space */
    }

    /* Continue with other adjustments for mobile layout */
    .nav-links a,
    .resume-button {
        font-size: 16px;
    }

    .profile-name,
    .nav-links a span,
    .resume-button span {
        display: none;
    }

    .nav-links {
        margin-top: 20px;
    }

    .resume-button {
        width: calc(100% - 4px); /* Adjust width to fit within the navbar, accounting for border */
        padding: 8px 0; /* Adjust padding to reduce overall size */
        font-size: 0.7em; /* Optional: Adjust font size to ensure text fits */
        justify-content: center;
        margin-bottom: 5px; /* Adjust spacing between buttons */
    }

    /* Adjustments for button container */
    .resume-container {
        width: 100%; /* Ensure the container matches the navbar width */
        padding: 0; /* Remove padding to maximize available space */
        margin-top: 10px; /* Adjust as needed for spacing within the navbar */
    }
}

